--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
    - limitations under the License.
    -->
 
+<!-- Portions Copyrighted 2015 ForgeRock AS. -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.fedorahosted.freeotp"
-    android:versionCode="16"
-    android:versionName="1.5" >
+    package="org.forgerock.authenticator"
+    android:versionName="1.0.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -49,36 +50,36 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".AboutActivity"
+            android:name="org.forgerock.authenticator.AboutActivity"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
             />
 
         <activity
-            android:name=".add.ScanActivity"
+            android:name="org.forgerock.authenticator.add.ScanActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
             />
 
         <activity
-            android:name=".add.AddActivity"
+            android:name="org.forgerock.authenticator.add.AddActivity"
             android:label="@string/add_token"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
             android:windowSoftInputMode="stateVisible"
             />
 
         <activity
-            android:name=".edit.DeleteActivity"
+            android:name="org.forgerock.authenticator.edit.DeleteActivity"
             android:label="@string/delete_question"
             android:theme="@android:style/Theme.Holo.Light.Dialog"
             />
 
         <activity
-            android:name=".edit.EditActivity"
+            android:name="org.forgerock.authenticator.edit.EditActivity"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
             android:windowSoftInputMode="stateVisible"
             />
 
         <activity
-            android:name=".MainActivity"
+            android:name="org.forgerock.authenticator.MainActivity"
             android:label="@string/app_name"
             android:clearTaskOnLaunch="true"
             android:launchMode="singleTask"
