--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.forgerock.authenticator"
-    android:versionName="0.1" >
+    android:versionName="1.0"
+    android:versionCode="1">
 
     <uses-sdk
         android:minSdkVersion="14"
