--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
 <!-- Portions Copyrighted 2015 ForgeRock AS. -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.forgerock.authenticator"
+    package="com.forgerock.authenticator"
     android:versionName="1.0"
     android:versionCode="1">
 
