--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,80 +22,80 @@
 <!-- Portions Copyrighted 2015 ForgeRock AS. -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.forgerock.authenticator"
-    android:versionName="1.0"
-    android:versionCode="1">
+          package="com.forgerock.authenticator"
+          android:versionName="1.0"
+          android:versionCode="1">
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="20" />
+            android:minSdkVersion="14"
+            android:targetSdkVersion="20"/>
 
     <supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"
-        android:largeScreens="true"
-        android:xlargeScreens="true"
-        android:resizeable="true"
-        android:anyDensity="true" />
+            android:smallScreens="true"
+            android:normalScreens="true"
+            android:largeScreens="true"
+            android:xlargeScreens="true"
+            android:resizeable="true"
+            android:anyDensity="true"/>
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/forgerock_logo"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
-        <activity
-            android:name="org.forgerock.authenticator.AboutActivity"
-            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-            />
-
-        <activity
-            android:name="org.forgerock.authenticator.add.ScanActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
-            />
-
-        <activity
-            android:name="org.forgerock.authenticator.add.AddActivity"
-            android:label="@string/add_token"
-            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-            android:windowSoftInputMode="stateVisible"
-            />
-
-        <activity
-            android:name="org.forgerock.authenticator.edit.DeleteActivity"
-            android:label="@string/delete_question"
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
-            />
-
-        <activity
-            android:name="org.forgerock.authenticator.edit.EditActivity"
-            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-            android:windowSoftInputMode="stateVisible"
-            />
-
-        <activity
-            android:name="org.forgerock.authenticator.MainActivity"
+            android:allowBackup="true"
+            android:icon="@drawable/forgerock_logo"
             android:label="@string/app_name"
-            android:clearTaskOnLaunch="true"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|screenSize"
-            >
+            android:theme="@style/AppTheme">
+
+        <activity
+                android:name="com.forgerock.authenticator.AboutActivity"
+                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
+        />
+
+        <activity
+                android:name="com.forgerock.authenticator.add.ScanActivity"
+                android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
+        />
+
+        <activity
+                android:name="com.forgerock.authenticator.add.AddActivity"
+                android:label="@string/add_token"
+                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
+                android:windowSoftInputMode="stateVisible"
+        />
+
+        <activity
+                android:name="com.forgerock.authenticator.edit.DeleteActivity"
+                android:label="@string/delete_question"
+                android:theme="@android:style/Theme.Holo.Light.Dialog"
+        />
+
+        <activity
+                android:name="com.forgerock.authenticator.edit.EditActivity"
+                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
+                android:windowSoftInputMode="stateVisible"
+        />
+
+        <activity
+                android:name="com.forgerock.authenticator.MainActivity"
+                android:label="@string/app_name"
+                android:clearTaskOnLaunch="true"
+                android:launchMode="singleTask"
+                android:configChanges="orientation|screenSize"
+        >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="otpauth" android:host="totp" />
-                <data android:scheme="otpauth" android:host="hotp" />
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="otpauth" android:host="totp"/>
+                <data android:scheme="otpauth" android:host="hotp"/>
             </intent-filter>
         </activity>
     </application>
