--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
    - limitations under the License.
    -->
 
-<!-- Portions Copyrighted 2015 ForgeRock AS. -->
+<!-- Portions Copyrighted 2015-2016 ForgeRock AS. -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.forgerock.authenticator"
