--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.forgerock.authenticator"
-        minSdkVersion 14
-        targetSdkVersion 20
+        minSdkVersion 19
+        targetSdkVersion 23
+        versionCode 2
+        versionName "2.0"
     }
 
     buildTypes {
@@ -26,7 +28,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.testng:testng:6.8.5'
 }
+
+apply plugin: 'com.google.gms.google-services'
