--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,8 +84,10 @@
                 android:label="@string/app_name"
                 android:clearTaskOnLaunch="true"
                 android:launchMode="singleTask"
-                android:configChanges="orientation|screenSize"
-        >
+                android:configChanges="orientation|screenSize">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -97,6 +99,43 @@
                 <data android:scheme="otpauth" android:host="totp"/>
                 <data android:scheme="otpauth" android:host="hotp"/>
             </intent-filter>
-        </activity>
+        </activity>>
+
+
+
+
+            <receiver
+                android:name="com.google.android.gms.gcm.GcmReceiver"
+                android:exported="true"
+                android:permission="com.google.android.c2dm.permission.SEND" >
+                <intent-filter>
+                    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                    <category android:name="org.forgerock.authenticator" />
+                </intent-filter>
+            </receiver>
+
+            <service
+                android:name="com.forgerock.authenticator.servcies.GCMServcie"
+                android:exported="false" >
+                <intent-filter>
+                    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                </intent-filter>
+            </service>
+
+            <service
+                android:name="com.forgerock.authenticator.servcies.InstanceIdListener"
+                android:exported="false">
+                <intent-filter>
+                    <action android:name="com.google.android.gms.iid.InstanceID"/>
+                </intent-filter>
+            </service>
+
+            <service
+                android:name="com.forgerock.authenticator.servcies.GCMRegistrationService"
+                android:exported="false">
+            </service>
+
+
+
     </application>
 </manifest>
