--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,14 +25,18 @@ android {
 }
 
 dependencies {
+    
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.testng:testng:6.8.5'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.testng:testng:6.8.5'
+    compile 'com.android.support:support-v4:23.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
