--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    - FreeOTP
    -
    - Authors: Nathaniel McCallum <npmccallum@redhat.com>
@@ -17,125 +16,127 @@
    - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    - See the License for the specific language governing permissions and
    - limitations under the License.
-   -->
-
-<!-- Portions Copyrighted 2015-2016 ForgeRock AS. -->
-
+--><!-- Portions Copyrighted 2015-2016 ForgeRock AS. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.forgerock.authenticator"
-          android:versionName="1.0"
-          android:versionCode="1">
+    package="com.forgerock.authenticator"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <uses-sdk
-            android:minSdkVersion="14"
-            android:targetSdkVersion="20"/>
+        android:minSdkVersion="14"
+        android:targetSdkVersion="20" />
 
     <supports-screens
-            android:smallScreens="true"
-            android:normalScreens="true"
-            android:largeScreens="true"
-            android:xlargeScreens="true"
-            android:resizeable="true"
-            android:anyDensity="true"/>
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/forgerock_logo"
+        android:allowBackup="true"
+        android:icon="@drawable/forgerock_logo"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar" />
+        <activity
+            android:name=".add.ScanActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" />
+        <activity
+            android:name=".add.AddActivity"
+            android:label="@string/add_token"
+            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
+            android:windowSoftInputMode="stateVisible" />
+        <activity
+            android:name=".edit.DeleteActivity"
+            android:label="@string/delete_question"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
+        <activity
+            android:name=".edit.EditActivity"
+            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
+            android:windowSoftInputMode="stateVisible" />
+        <activity
+            android:name=".MainActivity"
+            android:clearTaskOnLaunch="true"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-
-        <activity
-                android:name="com.forgerock.authenticator.AboutActivity"
-                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-        />
-
-        <activity
-                android:name="com.forgerock.authenticator.add.ScanActivity"
-                android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
-        />
-
-        <activity
-                android:name="com.forgerock.authenticator.add.AddActivity"
-                android:label="@string/add_token"
-                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-                android:windowSoftInputMode="stateVisible"
-        />
-
-        <activity
-                android:name="com.forgerock.authenticator.edit.DeleteActivity"
-                android:label="@string/delete_question"
-                android:theme="@android:style/Theme.Holo.Light.Dialog"
-        />
-
-        <activity
-                android:name="com.forgerock.authenticator.edit.EditActivity"
-                android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-                android:windowSoftInputMode="stateVisible"
-        />
-
-        <activity
-                android:name="com.forgerock.authenticator.MainActivity"
-                android:label="@string/app_name"
-                android:clearTaskOnLaunch="true"
-                android:launchMode="singleTask"
-                android:configChanges="orientation|screenSize">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="otpauth" android:host="totp"/>
-                <data android:scheme="otpauth" android:host="hotp"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="totp"
+                    android:scheme="otpauth" />
+                <data
+                    android:host="hotp"
+                    android:scheme="otpauth" />
             </intent-filter>
-        </activity>>
+        </activity>
+        >
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
+                <category android:name="org.forgerock.authenticator" />
+            </intent-filter>
+        </receiver>
 
+        <service
+            android:name=".message.GCMServcie"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".message.InstanceIdListener"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".message.GCMRegistrationService"
+            android:exported="false" />
 
-
-            <receiver
-                android:name="com.google.android.gms.gcm.GcmReceiver"
-                android:exported="true"
-                android:permission="com.google.android.c2dm.permission.SEND" >
-                <intent-filter>
-                    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                    <category android:name="org.forgerock.authenticator" />
-                </intent-filter>
-            </receiver>
-
-            <service
-                android:name="com.forgerock.authenticator.servcies.GCMServcie"
-                android:exported="false" >
-                <intent-filter>
-                    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                </intent-filter>
-            </service>
-
-            <service
-                android:name="com.forgerock.authenticator.servcies.InstanceIdListener"
-                android:exported="false">
-                <intent-filter>
-                    <action android:name="com.google.android.gms.iid.InstanceID"/>
-                </intent-filter>
-            </service>
-
-            <service
-                android:name="com.forgerock.authenticator.servcies.GCMRegistrationService"
-                android:exported="false">
-            </service>
-
-
-
+        <activity
+            android:name=".message.NewMessageActivity"
+            android:label="@string/title_activity_new_message">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
+
 </manifest>
