--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.forgerock.authenticator"
-        minSdkVersion 19
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 2
         versionName "2.0"
@@ -17,6 +17,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            debuggable true
+        }
+    }
+
+    testOptions {
+        unitTests.all {
+            useTestNG()
+        }
     }
 
     lintOptions {
@@ -25,9 +34,7 @@ android {
 }
 
 dependencies {
-    
 
-    testCompile 'junit:junit:4.12'
     testCompile 'org.testng:testng:6.8.5'
     testCompile 'org.mockito:mockito-core:1.9.5'
 
