--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,18 @@ dependencies {
     testCompile 'org.testng:testng:6.8.5'
     testCompile 'org.mockito:mockito-core:1.9.5'
 
+    // Gson for Serialisation
     compile 'com.google.code.gson:gson:2.6.2'
+    // ZXing for QR Code library
     compile 'com.google.zxing:core:3.2.1'
+    // For image management
     compile 'com.squareup.picasso:picasso:2.5.2'
+    // GCM Notifications
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
+    // Logging framework
+    compile 'org.slf4j:slf4j-android:1.7.18'
 }
 
 apply plugin: 'com.google.gms.google-services'
