--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
         android:allowBackup="true"
         android:icon="@drawable/forgerock_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".utils.FRAuthApplication">
+        <meta-data android:name="roboguice.modules" android:value="com.forgerock.authenticator.AuthGuiceModule"/>
         <activity
             android:name=".AboutActivity"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar" />
