--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
             android:label="@string/delete_question"
             android:theme="@android:style/Theme.Holo.Light.Dialog" />
         <activity
+            android:name=".delete.DeleteIdentityActivity"
+            android:label="@string/delete_question"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
+        <activity
             android:name=".IdentityActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
@@ -75,12 +79,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".mechanisms.push.PushAuthActivity"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
+        </activity>
+        <activity
             android:name=".MechanismActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".mechanisms.push.PushAuthActivity"
+            android:name=".NotificationActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
         </activity>
