--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,18 +86,22 @@
         <activity
             android:name=".MechanismActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name">
+            android:label="Account">
         </activity>
         <activity
             android:name=".NotificationActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name">
-        </activity>
+            android:label="Notifications" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:configChanges="orientation|screenSize"
+            android:label="Settings" />
         <activity
             android:name=".MainActivity"
             android:clearTaskOnLaunch="true"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+            android:label="My Accounts"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
