--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     testCompile 'org.testng:testng:6.8.5'
     testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile "org.robolectric:robolectric:3.0"
 
     // Gson for Serialisation
     compile 'com.google.code.gson:gson:2.6.2'
