--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'com.google.gms:google-services:2.0.0-beta5'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.1.0'
+
     }
 }
 
