RELENG-47 Upgrade Jacoco to 0.7.6
This makes it compatible with the Jacoco Jenkins plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ dependencies {
 
 apply plugin: 'jacoco'
 
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+}
+
 task generateCoverage(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
     sourceDirectories = files('src/main/java')
     classDirectories = fileTree('build/intermediates/classes/debug') {
