--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@
  */
 apply plugin: 'com.android.application'
 
+def buildNumber = System.getenv('BUILD_NUMBER') ?: "1"
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -23,7 +25,7 @@ android {
         applicationId "com.forgerock.authenticator"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 2
+        versionCode buildNumber.toInteger()
         versionName "2.0"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
