AME-11035 Fix various bugs caught during testing Added pushauth to expected data
Added callback to refresh IdentityActivity view

Fix task issue with PushAuthActivity

Add unit tests for MessageUtils

Fix QR code failing to scan if AMLB cookie is missing

Fix crash with bad image base64 data

Update delete dialogs

Update duplicate dialog

Add unit test for AMLB cookie

Change Oath to reject period of 0

Fix wrapping issue in OATH cell

Fix issue with links in About page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,12 +86,18 @@
                 <data
                     android:host="hotp"
                     android:scheme="otpauth" />
+
+                <data
+                    android:scheme="pushauth"
+                    android:host="push" />
             </intent-filter>
         </activity>
         <activity
             android:name=".mechanisms.push.PushAuthActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
             android:label="@string/app_title"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar">
         </activity>
