--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     testCompile('uk.org.lidalia:slf4j-test:1.2.0') {
         exclude group: 'org.slf4j'
     }
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.3.1'
 
     // Gson for Serialisation
     compile 'com.google.code.gson:gson:2.6.2'
